--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -4,34 +4,26 @@ button {
     margin: 0;
     padding: 0;
     border: 0;
-    color: var(--black);
     background: none;
     cursor: pointer;
     font-size: 1rem;
     width: 100%;
     padding: 0.5em 0.75em;
     position: relative;
-    background-color: var(--black);
-    color: var(--white);
-    box-shadow: 0 2px 0 var(--dark-grey);
-}
-
-button:hover {
-    background-color: var(--dark-grey);
 }
 
 /* dev!! */
-button:focus:not(.menu-button) {
-    color: var(--black);
-    background-color: var(--link-focus-color);
+button:focus {
+    color: var(--link-focus-color);
+    background-color: var(--link-focus-bg-color);
     text-decoration: none;
-    /* border: none; */
-    outline: 3px solid var(--black);
+    outline: 3px solid var(--link-focus-color);
 }
 
 button[aria-disabled='true'] {
     opacity: 0.5;
     pointer-events: none;
+    /* cursor: not-allowed; */
 }
 
 .primary-button {
@@ -45,6 +37,7 @@ button[aria-disabled='true'] {
 }
 
 .warning-button {
+    color: var(--white);
     background-color: #d4351c;
     box-shadow: 0 2px 0 #55150b;
 }
@@ -67,12 +60,22 @@ button[aria-disabled='true'] {
     width: auto;
     color: var(--text-color);
     background: none;
-    border: 3px solid var(--black);
-    box-shadow: none;
+    border: 3px solid var(--text-color);
+}
+
+.menu-button:focus {
+    background-color: var(--menu-button-hover);
+    color: var(--text-color);
+
+    /* outline: 0;
+    border: 3px solid var(--link-focus-color); */
+
+    /* dev!! */
+    outline: 0;
 }
 
 .menu-button:hover {
-    background-color: var(--white);
+    background-color: var(--menu-button-hover);
 }
 
 .menu-button:after {
@@ -91,10 +94,6 @@ button[aria-disabled='true'] {
 
 .menu-button-opened:after {
     transform: rotateX(180deg);
-}
-
-.accessibility-button {
-    width: 100%;
 }
 
 @media (min-width: 40em) {
