--- a/css/components/skip-link.css
+++ b/css/components/skip-link.css
@@ -9,6 +9,7 @@
 .skip-to-content-link:focus {
     left: 0.5rem;
     z-index: 10;
-    background-color: var(--link-focus-color);
-    color: var(--text-color);
+    /* background-color: var(--link-focus-color); */
+    background-color: var(--link-focus-bg-color);
+    color: var(--link-focus-color);
 }
