--- a/css/settings/variables.css
+++ b/css/settings/variables.css
@@ -1,5 +1,6 @@
 :root {
     --black: #0b0c0c;
+    --black-2: #121414;
     --dark-grey: #2c2f30;
     --grey: #505a5f;
     --light-grey: #f3f2f1;
@@ -9,16 +10,14 @@
     --blue: #003078;
     --hva-purple: #25167a;
 
-    --subtle-shadow: 0 -5px 15px 3px rgb(0 0 0 / 15%);
+    --subtle-shadow: 0 5px 15px 3px rgb(0 0 0 / 5%);
 
     --text-color: var(--black);
     --link-color: var(--light-blue);
     --link-hover-color: var(--blue);
-    /* --link-focus-color: var(--yellow); */
-    --link-focus-color: var(--white);
+    /* --link-focus-bg-color: var(--yellow); */
+    --link-focus-bg-color: var(--white);
+    --link-focus-color: var(--black);
     --background-color: var(--white);
-
-    /* --breakpoint-mobile: 40rem; */
-    /* --breakpoint-bla: 75rem; */
-    /* --breakpoint-header: 60rem; */
+    --menu-button-hover: #ebeae9;
 }
